--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <!-- Yet another fucking search engine
 version 0.5 -->
@@ -10,4 +11,6 @@ version 0.5 -->
     <link rel="icon" href="./css/icon.png" type="image/x-icon">
   </head>
   <body>
+        <!--<script src="index.js"></script>-->
   </body>
+</html>
