--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ version 0.5 -->
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vincent's Website</title>
+    <title>yafse</title>
 <link rel="stylesheet" href="./css/7.css">
 <link rel="stylesheet" href="./css/Maincss.css">
     <link rel="icon" href="./css/icon.png" type="image/x-icon">
