--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@ version 0.5 -->
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>yafse</title>
+    <title>AFSE</title>
 <link rel="stylesheet" href="./css/7.css">
 <link rel="stylesheet" href="./css/Maincss.css">
     <link rel="icon" href="./css/icon.png" type="image/x-icon">
   </head>
   <body>
+<h1>AFSE</h1>
         <!--<script src="index.js"></script>-->
   </body>
 </html>
