--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ version 0.5 -->
   </head>
   <body>
 <h1>AFSE</h1>
-        <!--<script src="index.js"></script>-->
+<a1>Sorry, you need JavaScript to use this, if you're seeing this but have JS enabled, the script could be at fault</a1>
+        <script src="index.js"></script>
   </body>
 </html>
