--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@ version 0.5 -->
   <body>
 <h1>AFSE</h1>
 <a1>Sorry, you need JavaScript to use this, if you're seeing this but have JS enabled, the script could be at fault</a1>
-        <script src="index.js"></script>
+
+    <div class="search-container">
+        <input type="text" placeholder="Search...">
+        <button>Search</button>
+        <img src="https://via.placeholder.com/50" alt="Placeholder Image">
+    </div>
+        <script src="js/index.js"></script>
   </body>
 </html>
