--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ version 0.5 -->
     <link rel="icon" href="./css/icon.png" type="image/x-icon">
   </head>
   <body>
-<h1>AFSE</h1>
-<a1>Sorry, you need JavaScript to use this, if you're seeing this but have JS enabled, the script could be at fault</a1>
+<h1 id="h1">AFSE</h1>
+<a id="a1">Sorry, you need JavaScript to use this, if you're seeing this but have JS enabled, the script could be at fault</a>
 
     <div class="search-container">
         <input type="text" placeholder="Search...">
